tests/baselines/reference/mismatchedExplicitTypeParameterAndArgumentType.errors.txt
tests/cases/compiler/mismatchedExplicitTypeParameterAndArgumentType.ts(10,30): error TS2345: Argument of type '(文字 | 数字)[]' is not assignable to parameter of type '数字[]'.
  Type '文字 | 数字' is not assignable to type '数字'.
    Type '文字' is not assignable to type '数字'.
tests/cases/compiler/mismatchedExplicitTypeParameterAndArgumentType.ts(11,11): error TS2558: Expected 2 type arguments, but got 1.


==== tests/cases/compiler/mismatchedExplicitTypeParameterAndArgumentType.ts (2 errors) ====
    function map<T, U>(xs: T[], f: (x: T) => U) {
        var ys: U[] = [];
        xs.forEach(x => ys.push(f(x)));
        return ys;
    }
    
    var r0 = map([1, ""], (x) => x.toString());
    var r5 = map<any, any>([1, ""], (x) => x.toString());
    var r6 = map<Object, Object>([1, ""], (x) => x.toString());
    var r7 = map<number, string>([1, ""], (x) => x.toString()); // error
                                 ~~~~~~~
!!! error TS2345: Argument of type '(文字 | 数字)[]' is not assignable to parameter of type '数字[]'.
!!! error TS2345:   Type '文字 | 数字' is not assignable to type '数字'.
!!! error TS2345:     Type '文字' is not assignable to type '数字'.
    var r7b = map<number>([1, ""], (x) => x.toString()); // error
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2558: Expected 2 type arguments, but got 1.
    var r8 = map<any, string>([1, ""], (x) => x.toString());